--- a/css/style.css
+++ b/css/style.css
@@ -1424,3 +1424,9 @@ main {
   font-size: 30px;
   padding: 10px 3px;
  }
+
+ .error__inner {
+  margin-top: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+ }
