Fix class for validator and fix close err/success

--- a/css/style.css
+++ b/css/style.css
@@ -1425,7 +1425,7 @@ main {
   padding: 10px 3px;
  }
 
- .error__inner {
+ .pristine-error {
   margin-top: 0;
   padding-top: 20px;
   padding-bottom: 20px;
