:heavy_check_mark: Сборка #11

--- a/11/css/style.css
+++ b/11/css/style.css
@@ -1424,3 +1424,9 @@ main {
   font-size: 30px;
   padding: 10px 3px;
  }
+
+ .pristine-error {
+  margin-top: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+ }
